--- a/chuok-frontend/angular.json
+++ b/chuok-frontend/angular.json
@@ -34,12 +34,19 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "/assets"
               }
             ],
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              
+            ],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
