Continuation of the previous commit - Added new Spring Boot entities and updated application properties

--- a/chuok-backend/src/main/resources/application.properties
+++ b/chuok-backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# Conexión a la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/chuok_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=chuok123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
 spring.application.name=chuok-backend
