--- a/chuok-backend/src/main/resources/application.properties
+++ b/chuok-backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# Conexión a la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/chuok_db?useSSL=false&serverTimezone=UTC
+# Database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/chuok_db?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=chuok123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
