- Corrected ERD and relational diagrams. - Added authentication and authorization features to the backend. - Implemented JWT-based security for user authentication. - Added user registration and login functionality.

--- a/chuok-backend/src/main/resources/application.properties
+++ b/chuok-backend/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+jwt.secret=Zk8A$Jf94K3pmq!9@vWy1bR7TuXv8FJsnI9HoP1Hma
+jwt.expiration=86400000
 
 spring.application.name=chuok-backend
