--- a/chuok-backend/src/main/resources/application.properties
+++ b/chuok-backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-jwt.secret=Zk8A$Jf94K3pmq!9@vWy1bR7TuXv8FJsnI9HoP1Hma
+jwt.secret=2cN@fH7Ls94ePwVYx!bTuJ&kZxR3LgAc
 jwt.expiration=86400000
 
 spring.application.name=chuok-backend
