- Added completion of levels logic to the backend. - Implemented level service and repository for managing levels. - Created a new interceptor for handling authentication in the frontend. - Updated frontend components to display levels and handle user interactions. - Refactored existing code to improve structure and maintainability.

--- a/chuok-backend/src/main/resources/application.properties
+++ b/chuok-backend/src/main/resources/application.properties
@@ -13,3 +13,14 @@ jwt.secret=2cN@fH7Ls94ePwVYx!bTuJ&kZxR3LgAc
 jwt.expiration=86400000
 
 spring.application.name=chuok-backend
+
+# Maximum error details
+server.error.include-stacktrace=always
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+# Enable all relevant logging
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.com.chuok=TRACE
