--- a/chuok-backend/src/main/resources/application.properties
+++ b/chuok-backend/src/main/resources/application.properties
@@ -1,25 +1,27 @@
-# Database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/chuok_db?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=chuok123
+# \u2705 Database connection desde variables de entorno
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA / Hibernate
+# \u2705 JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-jwt.secret=2cN@fH7Ls94ePwVYx!bTuJ&kZxR3LgAc
-jwt.expiration=86400000
+# \u2705 JWT desde variables de entorno tambi\u00E9n (opcional pero recomendado)
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
 
+# App name
 spring.application.name=chuok-backend
 
-# Maximum error details
+# Error reporting
 server.error.include-stacktrace=always
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-# Enable all relevant logging
+# Logging
 logging.level.root=DEBUG
 logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=DEBUG
