- Modified application.properties to include new database connection settings

--- a/chuok-backend/src/main/resources/application.properties
+++ b/chuok-backend/src/main/resources/application.properties
@@ -1,27 +1,25 @@
-# \u2705 Database connection desde variables de entorno
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# Database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/chuok_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=chuok123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# \u2705 JPA / Hibernate
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# \u2705 JWT desde variables de entorno tambi\u00E9n (opcional pero recomendado)
-jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION}
+jwt.secret=2cN@fH7Ls94ePwVYx!bTuJ&kZxR3LgAc
+jwt.expiration=86400000
 
-# App name
 spring.application.name=chuok-backend
 
-# Error reporting
+# Maximum error details
 server.error.include-stacktrace=always
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-# Logging
+# Enable all relevant logging
 logging.level.root=DEBUG
 logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=DEBUG
